added birthday reminder project

--- a/birthday-reminder/src/index.css
+++ b/birthday-reminder/src/index.css
@@ -41,7 +41,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
   --max-width: 1170px;
   --fixed-width: 450px;
-  --clr-pink: #f28ab2;
+  --clr-pink: #cbc0d3;
 }
 /*
 =============== 
@@ -117,6 +117,7 @@ p {
   h4 {
     line-height: 1;
   }
+  
 }
 /*  global classes */
 
@@ -186,6 +187,10 @@ main {
   padding: 0.5rem 0;
   letter-spacing: var(--spacing);
   border-radius: var(--radius);
-  outline: 1px solid rgba(242, 138, 178, 0.8);
+  outline: none;
   cursor: pointer;
+}
+
+.container button:hover {
+  background: #8e9aaf;
 }
